# ai-drawing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  discussion.md  docker-compose.yml  package-lock.json  resource_inventory_models.json  roadmap.jsx  roadmap.tsx  setup.ps1  setup.sh  tmp_anima_lora_workflow_expected.json  tmp_louise_14b_extend_arm_from_seg01_last.py  tmp_louise_14b_extend_arm_variants6.py  tmp_louise_pairwise_monitor.py  tmp_louise_pairwise_video.py  tmp_louise_pairwise_video_41f_1s.py  tmp_louise_pairwise_video_41f_1s_resume_seg02.py  tmp_louise_pairwise_video_41f_2s_after_1s.py  tmp_louise_red_electric_pairwise_from_prev_lastframe.py  tmp_louise_regen_seg02_from_seg1_lastframe_2s.py  tmp_louise_single_i2v_lastframe_continuity_14b_q4ks.py  tmp_louise_single_i2v_lastframe_continuity_5b_fair.py  tmp_louise_single_i2v_lastframe_continuity_resume_seg02.py  tmp_louise_single_i2v_lastframe_continuity_test.py  tmp_louise_small_explosion_inpaint_variants6.py  tmp_louise_tiny_dot_to_explosion_transition.py  tmp_louise_white_orb_clean_fullscreen_transition.py  tmp_louise_white_orb_fullscreen_transition.py
mcp-server/: README.md  pyproject.toml  requirements.txt
mcp-server/mcp_server/: __init__.py  character_style.py  client.py  config.py  description_parser.py  server.py  tool_catalog.py
mcp-server/tests/: test_character_style.py  test_civitai_recipe_compatibility_tools.py  test_civitai_recipe_tools.py  test_civitai_recipe_variant_alias_tools.py  test_civitai_recipe_variant_tools.py  test_civitai_resource_tools.py  (+22 more)
(+881 files in other folders)
